# pairing_planet_fullstack

./: .env  .gitignore  BUG_ANALYSIS.md  BUG_FIX_SUMMARY.md  CLAUDE.md  HYBRID_TRANSLATION_IMPLEMENTATION.md  INVESTIGATION_GUIDE.md  PARTIAL_TRANSLATION_FAILURE_FIX.md  README.md  SQS_HYBRID_TRANSLATION_STATUS.md  TRANSLATION_EDIT_FIX.md  TRANSLATION_STUCK_INVESTIGATION.md  build.gradle  codemagic.yaml  crowdin.yml  docker-compose.yml  firebase.json  investigate_log.sql  investigate_log_8f4a3d06.sql  investigate_log_fixed.sql  investigate_recipe_visibility.sql  investigate_stuck_log.sh  investigate_stuck_translation.sql  investigate_translation.py  pubspec.yaml  query_log.py
bot_engine/: .env.example  README.md  pyproject.toml  requirements.txt
bot_engine/scripts/: __init__.py  create_cooking_logs.py  create_one_log.py  create_one_recipe.py  create_recipe_with_step_images.py  create_recipes.py  create_recipes_all_bots.py  create_recipes_mixed.py  mock_seed.py  seed_bot_users_direct.py  setup_bot_users.py  simulate_24h_engagement.py
bot_engine/src/: __init__.py  cli.py
bot_engine/src/api/: __init__.py  client.py  models.py
bot_engine/src/config/: __init__.py  bot_schedules.json  schedule.py  settings.py
bot_engine/src/generators/: __init__.py
bot_engine/src/holidays/: __init__.py  lunar_calendar.py  models.py  service.py
bot_engine/src/orchestrator/: __init__.py  log_pipeline.py  recipe_pipeline.py  (+1 more)
bot_engine/tests/: __init__.py  conftest.py  test_api_models.py  test_generators.py  test_holidays.py  test_personas.py  test_pipelines.py  test_schedule.py
(+2008 files in other folders)
